--- a/src/styles/PlanetsList.css
+++ b/src/styles/PlanetsList.css
@@ -3,28 +3,3 @@
     list-style: none;
 }
 
-.rows{
-    display: flex;
-    flex-direction: column;
-}
-
-.row1, .row2{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.planetInfo{
-    height: 200px;
-    width: 200px;
-    margin: 20px 20px;
-    background-color: cornflowerblue;
-}
-
-.planetInfoVis{
-   visibility: visible;
-}
-
-.planetInfoNoVis{
-    visibility: hidden;
- }
